--- a/.gitattributes
+++ b/.gitattributes
@@ -32,10 +32,10 @@
 *.css linguist-detectable=true
 *.css linguist-documentation=false
 *.css linguist-language=CSS
-# Less stylesheet file
-*.less linguist-detectable=true
-*.less linguist-documentation=false
-*.less linguist-language=Less
+# HaProxy source file
+*.vtc linguist-detectable=true
+*.vtc linguist-documentation=false
+*.vtc linguist-language=HaProxy
 # JSON (JavaScript Object Notation) source file
 *.json linguist-detectable=false
 *.json linguist-documentation=false
@@ -165,6 +165,6 @@
 
 # File info
 # File type: gitattributes file (.gitattributes)
-# File version: 4 (2022, Tuesday, June 28th at 2:32 pm PST)
+# File version: 5 (2022, Thursday, September 15th at 1:02 pm PST)
 # Line count (including blank lines and compiler line): 171
 # End of script
